--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -54,7 +54,7 @@ nav a:hover{
     background-color:rgb(108, 173, 157);
 }
 .msg{
-    background-color:white;
+    background-color:rgb(160, 203, 238);
 }
 footer{
     background-color:#ddd376;
