--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=New+Rocker&family=Roboto:wght@100&family=Young+Serif&display=swap');
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -5,25 +7,53 @@
 
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 .logo{
     width:80px;
 }
+#logo_link{
+    padding-top:5px;
+}
+
 #hero-img{
-    width:100px;
+    width:100%;
+}
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+}
+.rivers-card{
+    margin:200px 0;
+}
+.camping-card{
+    margin:200px 0;
+}
+.rapids-card{
+    margin:200px 0;
+}
+.card-img{
+    border: 10px solid black;
+}
+.mountains{
+    margin:100px 0;
+}
+main section img{
+    box-sizing:border-box;
 }
 
 nav a{
     text-align: center;
     color:#27233a;
     text-decoration: none;
+    padding:35px;
 }
-#hero-msg h1, #hero-msg h4{
-    text-align: center;
-}
+
+
+
 .button-box{
     text-align:center;
 }
+
 main section{
     text-align:center;
 }
@@ -33,10 +63,19 @@ main section{
 }
 body{
     background-color:white;
+    font-family:'New Rocker','Young Serif','Roboto';
+    font-size:22px;
+    margin:0;
+    padding:0;
 }
+h2{
+    margin:0;
+}
+
 header{
     background-color:#73c9cc;
 }
+
 nav a:hover{
     background-color:#8f6ce0;
     color:#ff1053;
@@ -45,6 +84,10 @@ nav a:hover{
     background-color:#f3f58d;
     color:black;
     text-decoration: none;
+    font-size:18px;
+    padding:15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color:rgb(100, 156, 142);
@@ -55,22 +98,32 @@ nav a:hover{
 }
 .msg{
     background-color:rgb(134, 192, 240);
+    line-height:1.5em;
+    padding:35px;
 }
 footer{
     background-color:#ddd376;
     color:#27233a;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .home-title{
     color:green;
+    font-family:'New Rocker','Young Serif','Roboto';
+    font-size:2em;
+    margin-top: 10px;
 }
 h4{
     color:#27233a;
 }
 .msg h2{
     color:black;
+    font-family:'New Rocker','Young Serif','Roboto';
 }
 .msg p{
     color:#27233a;
+    font-size:.8em;
+    padding-bottom: 15px;
 }
 footer a{
     color:#ff1053;
@@ -85,4 +138,6 @@ footer p{
 footer p a:hover{
     text-decoration: underline;
 }
-
+footer .social img{
+    padding-top:15px;
+}
