--- a/positioning/positioning/positionstyles.css
+++ b/positioning/positioning/positionstyles.css
@@ -38,8 +38,8 @@
 .content2 {
   /* This is the parent of the activity 2 boxes. */
   display: grid;
-  grid-template-columns: 50px 50px 50px 50px 50px;
-  grid-template-rows: 50px 50px 50px 50px 50px;
+  grid-template-columns: repeat(5,50px);
+  grid-template-rows: repeat(5,50px);
 }
 .red2 {
   width: 100px; 
