--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=New+Rocker&family=Roboto:wght@100&family=Young+Serif&display=swap');
 
+body{
+    background-color: #73c9cc;
+}
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -340,4 +343,38 @@ form {
 } 
 .background-camp{
     background-color: #73c9cc;
+}
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+position: fixed;
+right: 0;
+bottom: 0;
+min-width: 100%;
+min-height: 100%;
+}
+
+/* Add some content at the bottom of the video/page */
+.content {
+position: fixed;
+bottom: 0;
+background: rgba(0, 0, 0, 0.5);
+color: #f1f1f1;
+width: 100%;
+padding: 20px;
+}
+
+/* Style the button used to pause/play the video */
+#myBtn {
+width: 200px;
+font-size: 18px;
+padding: 10px;
+border: none;
+background: #000;
+color: #fff;
+cursor: pointer;
+}
+
+#myBtn:hover {
+background: #ddd;
+color: black;
 }
